k8s/mongodb-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-kubernetes-operator
  labels:
    app: mongodb-kubernetes-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-kubernetes-operator
  template:
    metadata:
      labels:
        app: mongodb-kubernetes-operator
    spec:
      serviceAccountName: mongodb-kubernetes-operator
      containers:
        - name: mongodb-kubernetes-operator
          image: quay.io/mongodb/mongodb-kubernetes-operator:0.8.3
          command:
            - /manager
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 1100m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 200Mi
